--- a/css/index.css
+++ b/css/index.css
@@ -96,21 +96,23 @@ header nav {
   
   header nav a:hover {
     text-decoration: underline;
-  }
-  
-  header nav a:first-child {
-  }
-  
+  }  
   header nav a:last-child {
     margin-right: 0;
   }
 
 .top-content {
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 10px;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+}
+img {
+    display: flex;
+    margin-bottom: 20px;
 }
 
 .top-content .text-container {
