--- a/css/index.css
+++ b/css/index.css
@@ -136,71 +136,90 @@ img {
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-
-.middle-content .boxes .box{
-    width: 12.5%;
-    height: 100px;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .box1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: teal;
 }
 .box2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: gold;
 }
 .box3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: cadetblue;
 }
 .box4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: coral;
 }
-.box5 {
+.box5 {    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: crimson;
 }
 .box6 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: forestgreen;
 }
 .box7 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: darkorchid;
 }
 .box8 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: hotpink;
 }
 .box9 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
     background-color: indigo;
 }
 .box10 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
